# gaia-docker

./: .cursorignore  .env.example  .gitignore  .mcp.json  .vimrc  CLAUDE.md  Dockerfile  LICENSE  README.md  VERSION.json  dev.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.sh
.claude/agents/: docker-specialist.md  github-actions-specialist.md  local-dev.md  release-manager.md  test-engineer.md  version-sync.md
.claude/skills/release/: SKILL.md
.claude/skills/sync-versions/: SKILL.md
.claude/skills/test/: SKILL.md
.cursor/rules/: docker.mdc  index.mdc  python.mdc  testing.mdc
.github/workflows/: publish.yml  test.yml
docs/: README.md  docker-hub-description.md  docker-hub.md  dockerfile-usage.md
docs/gaia-dev/: README.md
docs/gaia-linux/: README.md
docs/gaia-windows/: README.md
gaia-dev/: Dockerfile  entrypoint.sh
gaia-linux/: Dockerfile  entrypoint.sh
tests/: conftest.py  test_build_args.py  test_container.py  test_dockerfile.py  test_dockerfile_dev.py  test_entrypoint.py  test_entrypoint_dev.py  test_version_file.py  test_workflow.py
