[project]
name = "gaia-docker"
version = "0.1.0"
description = "GAIA Linux container image"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-docker==3.1.1",
    "testcontainers==4.0.0",
    "python-dotenv==1.0.0",
    "black==24.1.1",
    "isort==5.13.2",
    "pyyaml==6.0.1",
]
